# StockPredictGUI

./: .gitignore  CMakeLists.txt  Predictor.cpp  Predictor.h  main.cpp
